# wolproxypyapi

./: .env-template  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements.txt
.github/workflows/: CI_CD.yml  codeql.yml  release.yml
config/: __init__.py  api.config  config.py
docs/: about.md  api.md  index.md
tests/api/: test_wolproxypyapi.py
wolproxypyapi/: __init__.py  __main__.py  info.py  main.py  models.py
