[tool.poetry]
name = "wolproxypyapi"
version = "0.1.2"
description = "A FastAPI RESTful web service for routing Wake-On-LAN packets via Internet"
authors = ["Fabio Calefato <fabio.calefato@uniba.it>"]
license = "MIT"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
wolproxypyapi = "wolproxypyapi.main:run"

[tool.poetry.dependencies]
python = "^3.12"
wolproxypycli = "^0.1.3"
fastapi = "^0.109.1"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
rich = "^10.16.1"
pretty-errors = "^1.2.25"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"
flake8 = "^4.0.1"
black = "^21.12b0"
pylint = "^2.12.2"
mypy = "^0.920"
bandit = "^1.7.1"
autopep8 = "^1.6.0"
pre-commit = "^2.16.0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pydocstyle = "^6.1.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-autorefs = "^0.5.0"
mkdocstrings-python = "^1.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
skips = ["B104","B610","B611","B702","B703"]

[tool.pydocstyle]
ignore = "D104,D203,D213,D406,D407,D413"
