[tool.poetry]
name = "wolproxypyapi"
version = "0.1.2"
description = "A FastAPI RESTful web service for routing Wake-On-LAN packets via Internet"
authors = ["Fabio Calefato <fabio.calefato@uniba.it>"]
license = "MIT"
include = [
    "LICENSE",
]

[tool.poetry.scripts]
wolproxypyapi = "wolproxypyapi.main:run"

[tool.poetry.dependencies]
python = "^3.12"
wolproxypycli = "^0.1.3"
fastapi = "^0.109.1"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
rich = "^10.16.1"
pretty-errors = "^1.2.25"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
flake8 = "^7.0.0"
black = "^24.1.1"
pylint = "^3.0.3"
mypy = "^1.8.0"
bandit = "^1.7.7"
autopep8 = "^2.0.4"
pre-commit = "^3.6.0"
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pydocstyle = "^6.3.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocstrings = "^0.24.0"
mkdocs-autorefs = "^0.5.0"
mkdocstrings-python = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.mypy]
ignore_missing_imports = true

[tool.bandit]
skips = ["B104","B610","B611","B702","B703"]

[tool.pydocstyle]
ignore = "D104,D203,D213,D406,D407,D413"

[tool.pytest.ini_options]
addopts = ["--cov-fail-under=80", "--cov-report=term-missing", "--cov=wolproxypyapi"]
